# jax-ml-project

./: .pre-commit-config.yaml  .python-version  Dockerfile  LICENSE  README.md  cookiecutter.json  generate_param_only_checkpoint.py  pyproject.toml  run_train.py  sitemap.xml
.devcontainer/: Dockerfile  devcontainer.json
hooks/: post_gen_project.py  pre_gen_project.py
src/jax_ml_project/input_pipeline/: __init__.py  grain_data_processing.py
src/jax_ml_project/train_lib/: checkpointing.py  metrics.py  multihost_dataloading.py
src/project/configs/: default.py
src/project/input_pipeline/: grain_data_processing.py  input_pipeline_interface.py
src/project/model/: __init__.py  model.py
src/project/train_lib/: checkpointing.py  metrics.py  multihost_dataloading.py  train.py  utils.py
{{ cookiecutter.project_name }}/: Dockerfile  HISTORY.rst  README.md  generate_param_only_checkpoint.py  pyproject.toml  renovate.json  run_train.py
{{ cookiecutter.project_name }}/.devcontainer/: devcontainer.json
{{ cookiecutter.project_name }}/src/{{ cookiecutter.project_slug }}/: __init__.py
{{ cookiecutter.project_name }}/src/{{ cookiecutter.project_slug }}/model/: layers.py
{{ cookiecutter.repo_name }}/: .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  generate_param_only_checkpoint.py  pyproject.toml  pyrightconfig.json  run_train.py
{{ cookiecutter.repo_name }}/.devcontainer/: devcontainer.json
{{ cookiecutter.repo_name }}/docs/mkdocs/: README.md
{{ cookiecutter.repo_name }}/docs/mkdocs/docs/: index.md
{{ cookiecutter.repo_name }}/src/{{ cookiecutter.module_name }}/: __init__.py
{{ cookiecutter.repo_name }}/src/{{ cookiecutter.module_name }}/configs/: __init__.py  default.py
{{ cookiecutter.repo_name }}/src/{{ cookiecutter.module_name }}/input_pipeline/: grain_data_processing.py  input_pipeline_interface.py  splits.py
{{ cookiecutter.repo_name }}/src/{{ cookiecutter.module_name }}/train_lib/: __init__.py  optimizers.py
