[build-system]
requires = ["uv_build>=0.6"]
build-backend = "uv_build"

[project]
name = "jax-ml-project"
version = "0.1.0"
description = ""

authors = [{ name = "Zheng Ma", email = "zhengma@sjtu.edu.cn" }]
maintainers = [{ name = "Zheng Ma", email = "zhengma@sjtu.edu.cn" }]

requires-python = ">=3.12"
readme = "README.md"
license = { file = "LICENSE" }

dependencies = [
    "clu>=0.0.12",
    "jax-ai-stack[grain]>=0.4.9",
    "tf-nightly-cpu>=2.20.0.dev20250214",
]

[project.optional-dependencies]
cuda = ["jax-cuda12-plugin[with-cuda]>=0.6.0"]

[tool.uv.sources]
jax-ai-stack = { git = "https://github.com/jax-ml/jax-ai-stack" }

[dependency-groups]
dev = [
    "cookiecutter>=2.6.0",
    "cookiecutter-data-science>=2.2.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.1",
    "mkdocs-material>=9.6.12",
    "penzai>=0.2.5",
    "pre-commit>=4.2.0",
    "ruff>=0.11.6",
]
